--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ node_modules/
 e2e/test-results/
 e2e/playwright-report/
 /tmp/
+# Large AI model files - bundled in assets but not committed
+*.task
