Add audio system: SFX + medieval background music
- Shared AudioEngine interface with GamePhase detection
- BrowserAudioEngine (Web) and AndroidAudioEngine (Android)
- 9 procedurally generated CC0 sound effects
- 11 RandomMind Medieval CC0 background music tracks (48kbps mono)
- Calm tracks for opening, intense tracks for midgame/endgame
- SFX/Music toggles in pause menu, music on by default
- Mobile autoplay unlock for web browsers
- Conversion scripts: download_originals.sh, convert_music.sh, generate_sfx.py
- AUDIO-LICENSES.md with full attribution

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ e2e/playwright-report/
 *.task
 gameplay-demo.mp4
 .kotlin/
+
+# Original music assets (47MB) — re-download with scripts/download_originals.sh
+assets/audio/music-originals/
