--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:allowBackup="true"
-        android:label="Chess Simulator"
+        android:icon="@mipmap/ic_launcher"
+        android:label="Ghost Chess"
         android:supportsRtl="true"
         android:theme="@style/Theme.ChessSimulator">
         <activity
